primer cambio en el banner

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     
     <span class="d-block p-2 bg-dark text-white"><a href="">TREATMENTS</a><a href="">FIND A DOCTOR</a><a href="">SCHEDULE A CONSULTATION</a><a href="">ARE YOU A DOCTOR</a></span>
     
+    <div>
+      <p>tell</p>
+    </div>
+
     <script src=""></script>
 </body>
 </html>
