--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="jquery/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
       </div>
     </nav>
     
-    <span class="d-block p-2 bg-dark text-white"><a href="">TREATMENTS</a><a href="">FIND A DOCTOR</a><a href="">SCHEDULE A CONSULTATION</a><a href="">ARE YOU A DOCTOR</a></span>
+    <div class="menu"><div class="menu-item" class="menu-item"><a href="">TREATMENTS</a></div><div class="menu-item"><a href="">FIND A DOCTOR</a></div><div class="menu-item"><a href="">SCHEDULE A CONSULTATION</a></div><div class="menu-item"><a href="">ARE YOU A DOCTOR</a></div></div>
     
     <script src=""></script>
 </body>
