--- a/login.html
+++ b/login.html
@@ -71,28 +71,16 @@
               <div class="card-body bg-white border-2">
                   <form class="text-center text-primary">
                       <div class="form-group">
-                        <label for="password">Email</label>
-                        <input type="text" class="form-control" id="email" aria-describedby="emailHelp" placeholder="">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="">
                       </div>
                       <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="text" class="form-control" id="password" aria-describedby="emailHelp" placeholder="">
-                      </div>
-                      <div class="form-group">
-                        <label for="password">Confirm Password</label>
-                        <input type="email" class="form-control" id="Confirm Password" aria-describedby="emailHelp" placeholder="">
+                        <label for="password">Email address</label>
+                        <input type="password" class="form-control" id="password" aria-describedby="emailHelp" placeholder="">
                       </div>
                     <div class="input-group mb-3">
-                    <div class="col-lg-12 text-center">
-                        <div class="form-check m-2">
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                          <label class="form-check-label" for="defaultCheck1">
-                            * I accepted the terms and conditions, the privacy policy and the treatment of my data
-                          </label>
-                        </div>  
-                    </div>
                     <div class="w-100 text-center">
-                       <button type="button" class="btn btn-primary text-uppercase m-4">Create Account</button> 
+                       <button type="button" class="btn btn-primary text-uppercase m-1">Get In</button> 
                     </div>
                   </div>
                   </form>
